--- a/css/style.css
+++ b/css/style.css
@@ -88,24 +88,27 @@ h1{
     color: #b9b8ba ;
 }
 .article{
-    width: 20%;
     margin: 20px 0;
 }
 .article.left{
     float: left;
+    width: 20%;
 }
 .article.middle{
     float: left;
+    margin: 15px;
     width: calc(60% - 30px);
-    margin: 20px 15px;
 }
 .article.right{
     float: right;
+    width: 20%;
 }
 
-article > img{
-    height: 40%;
+.article-img{
+    height: 100px;
     border-radius: 10px;
+    width: 100%;
+    object-fit: cover;
 }
 
 .main-article::after{
